# Palitrum

./: .gitignore  CMakeLists.txt  DataStructs.h  FavoriteModel.cpp  FavoriteModel.h  Main.qml  ModelRoles.h  PaletteModel.cpp  PaletteModel.h  ProjectModel.cpp  ProjectModel.h  README.md  SearchPaletteModel.cpp  SearchPaletteModel.h  SortModelProxy.cpp  SortProxyModel.h  StorageManager.cpp  StorageManager.h  main.cpp
components/cards/: ItemCard.qml  PaletteCard.qml  PaletteWindow.qml  ProjectCard.qml
components/controls/: SearchBar.qml  SortComboBox.qml  SpecialButton.qml
components/dialogs/: EditProjectDialog.qml  PaletteDialog.qml
components/navigation/: SideMenu.qml
components/views/: AbstractLayers.qml  PaletteView.qml  SearchView.qml
models/: FavouriteModel.qml  ProjectModel.qml
pages/: FavoritePage.qml  ProjectDetailPage.qml  ProjectPage.qml  ProjectSearchPage.qml  SearchPalettePage.qml
storage/: favourites.json  palettes.json  projects.json
